# src/controllers/api/s3UserVoiceController.js
@@ -13,7 +13,7 @@ const PREFIX = 'user-voice';
 const FORMAT = 'wav';
 const regex = /([^/]+)(\.[^./]+)$/g;
 
-export const getVoices = async (req, res) => {
+export const getUVoices = async (req, res) => {
   const bucketParams = { Bucket: conf.bucket.data, Prefix: PREFIX };
 
   try {
@@ -41,22 +41,22 @@ export const getVoices = async (req, res) => {
   } catch (err) {
     console.log('Error: ', err);
     return res
-      .status(err.statusCode)
+      .status(err.$metadata.httpStatusCode)
       .json({ success: 'false', errorMessage: err.message });
   }
 };
 
-export const getVoice = async (req, res) => {
+export const getUVoice = async (req, res) => {
   const { name } = req.params;
   const bucketParams = {
     Bucket: conf.bucket.data,
-    Key: `${PREFIX}/${name}`
+    Key: `${PREFIX}/${name}.${FORMAT}`
   };
 
   try {
     const data = await s3Client.send(new GetObjectCommand(bucketParams));
     const obj = {
-      name: bucketParams.Key.match(regex)[0].split('.')[0],
+      name,
       format: FORMAT,
       path: `${conf.bucket.data}/${bucketParams.Key}`,
       size: data.ContentLength,
@@ -66,15 +66,13 @@ export const getVoice = async (req, res) => {
   } catch (err) {
     console.log('Error: ', err);
     return res
-      .status(err.statusCode)
+      .status(err.$metadata.httpStatusCode)
       .json({ success: 'false', errorMessage: err.message });
   }
 };
 
-export const upload = (req, res) => {
-  // const { name } = req.params;
-  // console.log(name);
-  middleMulter.single('voice')(req, res, async err => {
+export const uploadUVoice = (req, res) => {
+  middleMulter.single('uploadedFile')(req, res, async err => {
     if (err instanceof multer.MulterError) {
       console.log(err);
       return res
@@ -93,14 +91,20 @@ export const upload = (req, res) => {
         errorMessage: 'You should upload "audio/wav" of mimetype'
       });
     }
-    const date = getNow();
-    const uploadParams = {
-      Bucket: conf.bucket.data,
-      Key: `${PREFIX}/${date}.${FORMAT}`,
-      Body: req.file.buffer,
-      ACL: 'public-read'
-    };
+    const bucketParams = { Bucket: conf.bucket.data, Prefix: PREFIX };
     try {
+      // for userVoices counts
+      const userVoices = await s3Client.send(
+        new ListObjectsCommand(bucketParams)
+      );
+      const date = getNow();
+
+      const uploadParams = {
+        Bucket: conf.bucket.data,
+        Key: `${PREFIX}/${date}-${userVoices.Contents.length - 1}.${FORMAT}`,
+        Body: req.file.buffer,
+        ACL: 'public-read'
+      };
       const data = await s3Client.send(new PutObjectCommand(uploadParams));
       console.log('Success', data);
       return res.json({
@@ -115,7 +119,9 @@ export const upload = (req, res) => {
       });
     } catch (err) {
       console.log('Error', err);
-      return res.json({ success: 'false', errorMessage: err.message });
+      return res
+        .status(err.$metadata.httpStatusCode)
+        .json({ success: 'false', errorMessage: err.message });
     }
   });
 };
